# speed-cube

./: .gitignore  CMakeLists.txt  README.md  config.h.in  speed-cube.cpp
lib/L76B/: CMakeLists.txt  L76B.cpp  L76B.h  gps_data.cpp  gps_data.h  gps_datetime.cpp  gps_datetime.h  kalman.cpp  kalman.h
lib/LCD/: CMakeLists.txt  LCD.cpp  LCD.h  font.h  font10x14.h  font5x7.h
lib/config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
lib/fatfs/: CMakeLists.txt  fatfs_storage.h
lib/font/: CMakeLists.txt  font120.c  font144.c  font36.c  font48.c  font72.c  font96.c  fontgen.py  fonts.h
lib/gps_logger/: CMakeLists.txt  gps_logger.cpp  gps_logger.h
lib/kalman/: CMakeLists.txt  kalman.cpp  kalman.h
lib/lcd/: CMakeLists.txt  LCD_Driver.h  LCD_GUI.c  LCD_GUI.h
lib/navigation/: CMakeLists.txt  control.cpp  control.h  gui.cpp  gui.h  marks.h  navigation.cpp  navigation.h  pointers.cpp  pointers.h  simulation.cpp  simulation.h  tack_detector.cpp  tack_detector.h  timeseries.cpp  timeseries.h
lib/pico_ups/: CMakeLists.txt  pico_ups.cpp  pico_ups.h
lib/sdcard/: CMakeLists.txt  MMC_SD.h
lib/webserver/: CMakeLists.txt  embed_assets.py  index_html.h  index_inlined_html.h  lwipopts.h  uPlot_iife_min_js.h  uPlot_min_css.h  webserver.cpp  webserver.h
lib/webserver/static/: index.dev.html  index.html  index.inlined.html
